--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -7,7 +7,12 @@ one:
   price: 9.99
 
 two:
-  title: MyString
+  title: MyString2
   description: MyText
-  image_url: MyString
+  image_url: MyString.jpg
   price: 9.99
+ruby:
+ title: Ruby on Rails 4
+ description: Zzzzzzz....
+ price: 9.99
+ image_url: img.jpg
